--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,14 @@
-flask==2.3.0
+flask==3.0.0
 flask-cors==4.0.0
-playwright==1.40.0
-gunicorn==20.1.0
+requests-html==0.10.0
+gunicorn==21.2.0
+```
+
+### **runtime.txt**:
+```
+python-3.11.0
+```
+
+### **Procfile** (opzionale ma consigliato):
+```
+web: gunicorn app:app --timeout 120 --workers 1
